boltffi_backend/tests/snapshots/swift__swift_target_renders_encoded_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_source(SourceFixture::many([\"records/person\", \"enums/shape\",\n\"enums/message\", \"exports/encoded_functions\",]))"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Person: Hashable, Equatable, Sendable {
    public var name: String

    public init(name: String) {
        self.name = name
    }

    @inlinable static func decode(from reader: inout WireReader) -> Person {
        Person(name: reader.readString())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeString(self.name)
    }
}

public enum Shape: Hashable, Equatable, Sendable {
    case label(String)

    @inlinable static func decode(from reader: inout WireReader) -> Shape {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .label(reader.readString())
        default:
            fatalError("Invalid Shape tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case let .label(field0):
            writer.writeU32(0)
            writer.writeString(field0)
        }
    }
}

public enum Message: Hashable, Equatable, Sendable {
    case empty
    case text(String)
    case named(name: String)

    @inlinable static func decode(from reader: inout WireReader) -> Message {
        let tag = reader.readU32()
        switch tag {
        case 0:
            return .empty
        case 1:
            return .text(reader.readString())
        case 2:
            return .named(name: reader.readString())
        default:
            fatalError("Invalid Message tag: \(tag)")
        }
    }

    @inlinable func encode(to writer: inout WireWriter) {
        switch self {
        case .empty:
            writer.writeU32(0)
        case let .text(field0):
            writer.writeU32(1)
            writer.writeString(field0)
        case let .named(name):
            writer.writeU32(2)
            writer.writeString(name)
        }
    }
}

public func echoBytes(bytes: Data) -> Data {
    let __boltffi_bytes_bytes = boltffiEncode { __boltffi_bytes_writer in __boltffi_bytes_writer.writeBytes(bytes) }
    return __boltffi_bytes_bytes.withUnsafeBufferPointer { __boltffi_bytes_buffer in
        let __boltffi_result = boltffi_function_demo_echo_bytes(__boltffi_bytes_buffer.baseAddress!, UInt(__boltffi_bytes_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readBytes() }
    }
}

public func keepPerson(person: Person) -> Person {
    let __boltffi_person_bytes = boltffiEncode { __boltffi_person_writer in person.encode(to: &__boltffi_person_writer) }
    return __boltffi_person_bytes.withUnsafeBufferPointer { __boltffi_person_buffer in
        let __boltffi_result = boltffi_function_demo_keep_person(__boltffi_person_buffer.baseAddress!, UInt(__boltffi_person_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in Person.decode(from: &__boltffi_reader) }
    }
}

public func keepShape(shape: Shape) -> Shape {
    let __boltffi_shape_bytes = boltffiEncode { __boltffi_shape_writer in shape.encode(to: &__boltffi_shape_writer) }
    return __boltffi_shape_bytes.withUnsafeBufferPointer { __boltffi_shape_buffer in
        let __boltffi_result = boltffi_function_demo_keep_shape(__boltffi_shape_buffer.baseAddress!, UInt(__boltffi_shape_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in Shape.decode(from: &__boltffi_reader) }
    }
}

public func echoMessage(message: Message) -> Message {
    let __boltffi_message_bytes = boltffiEncode { __boltffi_message_writer in message.encode(to: &__boltffi_message_writer) }
    return __boltffi_message_bytes.withUnsafeBufferPointer { __boltffi_message_buffer in
        let __boltffi_result = boltffi_function_demo_echo_message(__boltffi_message_buffer.baseAddress!, UInt(__boltffi_message_buffer.count))
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in Message.decode(from: &__boltffi_reader) }
    }
}

@usableFromInline struct WireReader {
    @usableFromInline let data: Data
    @usableFromInline var position: Int

    @inlinable init(data: Data, position: Int = 0) {
        self.data = data
        self.position = position
    }

    @inlinable init(ptr: UnsafePointer<UInt8>, len: Int) {
        self.data = Data(bytes: ptr, count: len)
        self.position = 0
    }

    @inlinable mutating func readU8() -> UInt8 {
        let value = data[position]
        position += 1
        return value
    }

    @inlinable mutating func readI8() -> Int8 {
        Int8(bitPattern: readU8())
    }

    @inlinable mutating func readU16() -> UInt16 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt16.self)
        }
        position += 2
        return UInt16(littleEndian: value)
    }

    @inlinable mutating func readI16() -> Int16 {
        Int16(bitPattern: readU16())
    }

    @inlinable mutating func readU32() -> UInt32 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt32.self)
        }
        position += 4
        return UInt32(littleEndian: value)
    }

    @inlinable mutating func readI32() -> Int32 {
        Int32(bitPattern: readU32())
    }

    @inlinable mutating func readU64() -> UInt64 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt64.self)
        }
        position += 8
        return UInt64(littleEndian: value)
    }

    @inlinable mutating func readI64() -> Int64 {
        Int64(bitPattern: readU64())
    }

    @inlinable mutating func readF32() -> Float {
        Float(bitPattern: readU32())
    }

    @inlinable mutating func readF64() -> Double {
        Double(bitPattern: readU64())
    }

    @inlinable mutating func readBool() -> Bool {
        readU8() != 0
    }

    @inlinable mutating func readString() -> String {
        let length = Int(readU32())
        guard length > 0 else { return "" }
        let start = position
        position += length
        return data.withUnsafeBytes { bytes in
            let pointer = bytes.baseAddress!.advanced(by: start).assumingMemoryBound(to: UInt8.self)
            let buffer = UnsafeBufferPointer(start: pointer, count: length)
            return String(decoding: buffer, as: UTF8.self)
        }
    }

    @inlinable mutating func readBytes() -> Data {
        let length = Int(readU32())
        guard length > 0 else { return Data() }
        let start = position
        position += length
        return data[start..<(start + length)]
    }

    @inlinable mutating func readOptional<T>(_ body: (inout WireReader) -> T) -> T? {
        switch readU8() {
        case 0:
            return nil
        case 1:
            return body(&self)
        default:
            fatalError("Invalid optional wire tag")
        }
    }

    @inlinable mutating func readSequence<T>(_ body: (inout WireReader) -> T) -> [T] {
        let count = Int(readU32())
        return (0..<count).map { _ in body(&self) }
    }
}

@usableFromInline struct WireWriter {
    @usableFromInline var data: Data

    @inlinable init(capacity: Int = 64) {
        self.data = Data(capacity: capacity)
    }

    @inlinable mutating func writeU8(_ value: UInt8) {
        data.append(value)
    }

    @inlinable mutating func writeI8(_ value: Int8) {
        writeU8(UInt8(bitPattern: value))
    }

    @inlinable mutating func writeU16(_ value: UInt16) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI16(_ value: Int16) {
        writeU16(UInt16(bitPattern: value))
    }

    @inlinable mutating func writeU32(_ value: UInt32) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI32(_ value: Int32) {
        writeU32(UInt32(bitPattern: value))
    }

    @inlinable mutating func writeU64(_ value: UInt64) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI64(_ value: Int64) {
        writeU64(UInt64(bitPattern: value))
    }

    @inlinable mutating func writeF32(_ value: Float) {
        writeU32(value.bitPattern)
    }

    @inlinable mutating func writeF64(_ value: Double) {
        writeU64(value.bitPattern)
    }

    @inlinable mutating func writeBool(_ value: Bool) {
        writeU8(value ? 1 : 0)
    }

    @inlinable mutating func writeString(_ value: String) {
        var value = value
        value.withUTF8 { utf8 in
            writeU32(UInt32(utf8.count))
            data.append(contentsOf: utf8)
        }
    }

    @inlinable mutating func writeBytes(_ value: Data) {
        writeU32(UInt32(value.count))
        data.append(contentsOf: value)
    }

    @inlinable mutating func writeOptional<T>(_ value: T?, _ body: (inout WireWriter, T) -> Void) {
        switch value {
        case .some(let value):
            writeU8(1)
            body(&self, value)
        case .none:
            writeU8(0)
        }
    }

    @inlinable mutating func writeSequence<T>(_ value: [T], _ body: (inout WireWriter, T) -> Void) {
        writeU32(UInt32(value.count))
        value.forEach { body(&self, $0) }
    }

    @inlinable func finalize() -> Data {
        data
    }
}

@inlinable func boltffiDecodeOwnedBuf<T>(
    _ pointer: UnsafePointer<UInt8>?,
    _ length: Int,
    _ decode: (inout WireReader) -> T
) -> T {
    var reader = WireReader(ptr: pointer!, len: length)
    return decode(&reader)
}

@inlinable func boltffiEncode(_ body: (inout WireWriter) -> Void) -> [UInt8] {
    var writer = WireWriter()
    body(&writer)
    return [UInt8](writer.finalize())
}
