boltffi_backend/tests/snapshots/swift__swift_target_renders_fallible_functions_as_throwing_functions.snap
---
source: boltffi_backend/tests/swift.rs
assertion_line: 78
expression: "rendered_fixture(\"exports/fallible_returns\")"
---
===== DemoFFI.swift =====
import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Int32
    public var y: Int32

    public init(x: Int32, y: Int32) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public enum MathError: Int32, Hashable, Sendable, CaseIterable, Error {
    case invalidInput = 0

    @usableFromInline init(fromC c: Int32) {
        self = MathError(rawValue: c)!
    }

    @usableFromInline var cValue: Int32 {
        rawValue
    }
}

public func checkedAdd(left: Int32, right: Int32) throws -> Int32 {
    var __boltffi_result: Int32 = Int32()
    let __boltffi_error = boltffi_function_demo_checked_add(left, right, &__boltffi_result)
    if __boltffi_error.ptr != nil || Int(__boltffi_error.len) != 0 {
        defer { boltffi_free_buf(__boltffi_error) }
        throw boltffiDecodeOwnedBuf(__boltffi_error.ptr, Int(__boltffi_error.len)) { __boltffi_error_reader in MathError(rawValue: __boltffi_error_reader.readI32())! }
    }
    return __boltffi_result
}

public func parsePoint(text: String) throws -> Point {
    let __boltffi_text_bytes = boltffiEncode { __boltffi_text_writer in __boltffi_text_writer.writeString(text) }
    return __boltffi_text_bytes.withUnsafeBufferPointer { __boltffi_text_buffer in
        var __boltffi_result: ___Point = ___Point()
        let __boltffi_error = boltffi_function_demo_parse_point(__boltffi_text_buffer.baseAddress!, UInt(__boltffi_text_buffer.count), &__boltffi_result)
        if __boltffi_error.ptr != nil || Int(__boltffi_error.len) != 0 {
            defer { boltffi_free_buf(__boltffi_error) }
            throw boltffiDecodeOwnedBuf(__boltffi_error.ptr, Int(__boltffi_error.len)) { __boltffi_error_reader in MathError(rawValue: __boltffi_error_reader.readI32())! }
        }
        return Point(fromC: __boltffi_result)
    }
}

public func validateName(name: String) throws -> String {
    let __boltffi_name_bytes = boltffiEncode { __boltffi_name_writer in __boltffi_name_writer.writeString(name) }
    return __boltffi_name_bytes.withUnsafeBufferPointer { __boltffi_name_buffer in
        var __boltffi_result: FfiBuf_u8 = FfiBuf_u8()
        let __boltffi_error = boltffi_function_demo_validate_name(__boltffi_name_buffer.baseAddress!, UInt(__boltffi_name_buffer.count), &__boltffi_result)
        if __boltffi_error.ptr != nil || Int(__boltffi_error.len) != 0 {
            defer { boltffi_free_buf(__boltffi_error) }
            throw boltffiDecodeOwnedBuf(__boltffi_error.ptr, Int(__boltffi_error.len)) { __boltffi_error_reader in MathError(rawValue: __boltffi_error_reader.readI32())! }
        }
        defer { boltffi_free_buf(__boltffi_result) }
        return boltffiDecodeOwnedBuf(__boltffi_result.ptr, Int(__boltffi_result.len)) { __boltffi_reader in __boltffi_reader.readString() }
    }
}

@usableFromInline struct WireReader {
    @usableFromInline let data: Data
    @usableFromInline var position: Int

    @inlinable init(data: Data, position: Int = 0) {
        self.data = data
        self.position = position
    }

    @inlinable init(ptr: UnsafePointer<UInt8>, len: Int) {
        self.data = Data(bytes: ptr, count: len)
        self.position = 0
    }

    @inlinable mutating func readU8() -> UInt8 {
        let value = data[position]
        position += 1
        return value
    }

    @inlinable mutating func readI8() -> Int8 {
        Int8(bitPattern: readU8())
    }

    @inlinable mutating func readU16() -> UInt16 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt16.self)
        }
        position += 2
        return UInt16(littleEndian: value)
    }

    @inlinable mutating func readI16() -> Int16 {
        Int16(bitPattern: readU16())
    }

    @inlinable mutating func readU32() -> UInt32 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt32.self)
        }
        position += 4
        return UInt32(littleEndian: value)
    }

    @inlinable mutating func readI32() -> Int32 {
        Int32(bitPattern: readU32())
    }

    @inlinable mutating func readU64() -> UInt64 {
        let value = data.withUnsafeBytes { buffer in
            buffer.loadUnaligned(fromByteOffset: position, as: UInt64.self)
        }
        position += 8
        return UInt64(littleEndian: value)
    }

    @inlinable mutating func readI64() -> Int64 {
        Int64(bitPattern: readU64())
    }

    @inlinable mutating func readF32() -> Float {
        Float(bitPattern: readU32())
    }

    @inlinable mutating func readF64() -> Double {
        Double(bitPattern: readU64())
    }

    @inlinable mutating func readBool() -> Bool {
        readU8() != 0
    }

    @inlinable mutating func readString() -> String {
        let length = Int(readU32())
        guard length > 0 else { return "" }
        let start = position
        position += length
        return data.withUnsafeBytes { bytes in
            let pointer = bytes.baseAddress!.advanced(by: start).assumingMemoryBound(to: UInt8.self)
            let buffer = UnsafeBufferPointer(start: pointer, count: length)
            return String(decoding: buffer, as: UTF8.self)
        }
    }

    @inlinable mutating func readBytes() -> Data {
        let length = Int(readU32())
        guard length > 0 else { return Data() }
        let start = position
        position += length
        return data[start..<(start + length)]
    }

    @inlinable mutating func readOptional<T>(_ body: (inout WireReader) -> T) -> T? {
        switch readU8() {
        case 0:
            return nil
        case 1:
            return body(&self)
        default:
            fatalError("Invalid optional wire tag")
        }
    }

    @inlinable mutating func readSequence<T>(_ body: (inout WireReader) -> T) -> [T] {
        let count = Int(readU32())
        return (0..<count).map { _ in body(&self) }
    }
}

@usableFromInline struct WireWriter {
    @usableFromInline var data: Data

    @inlinable init(capacity: Int = 64) {
        self.data = Data(capacity: capacity)
    }

    @inlinable mutating func writeU8(_ value: UInt8) {
        data.append(value)
    }

    @inlinable mutating func writeI8(_ value: Int8) {
        writeU8(UInt8(bitPattern: value))
    }

    @inlinable mutating func writeU16(_ value: UInt16) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI16(_ value: Int16) {
        writeU16(UInt16(bitPattern: value))
    }

    @inlinable mutating func writeU32(_ value: UInt32) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI32(_ value: Int32) {
        writeU32(UInt32(bitPattern: value))
    }

    @inlinable mutating func writeU64(_ value: UInt64) {
        var value = value.littleEndian
        Swift.withUnsafeBytes(of: &value) { bytes in
            data.append(contentsOf: bytes)
        }
    }

    @inlinable mutating func writeI64(_ value: Int64) {
        writeU64(UInt64(bitPattern: value))
    }

    @inlinable mutating func writeF32(_ value: Float) {
        writeU32(value.bitPattern)
    }

    @inlinable mutating func writeF64(_ value: Double) {
        writeU64(value.bitPattern)
    }

    @inlinable mutating func writeBool(_ value: Bool) {
        writeU8(value ? 1 : 0)
    }

    @inlinable mutating func writeString(_ value: String) {
        var value = value
        value.withUTF8 { utf8 in
            writeU32(UInt32(utf8.count))
            data.append(contentsOf: utf8)
        }
    }

    @inlinable mutating func writeBytes(_ value: Data) {
        writeU32(UInt32(value.count))
        data.append(contentsOf: value)
    }

    @inlinable mutating func writeOptional<T>(_ value: T?, _ body: (inout WireWriter, T) -> Void) {
        switch value {
        case .some(let value):
            writeU8(1)
            body(&self, value)
        case .none:
            writeU8(0)
        }
    }

    @inlinable mutating func writeSequence<T>(_ value: [T], _ body: (inout WireWriter, T) -> Void) {
        writeU32(UInt32(value.count))
        value.forEach { body(&self, $0) }
    }

    @inlinable func finalize() -> Data {
        data
    }
}

@inlinable func boltffiDecodeOwnedBuf<T>(
    _ pointer: UnsafePointer<UInt8>?,
    _ length: Int,
    _ decode: (inout WireReader) -> T
) -> T {
    var reader = WireReader(ptr: pointer!, len: length)
    return decode(&reader)
}

@inlinable func boltffiEncode(_ body: (inout WireWriter) -> Void) -> [UInt8] {
    var writer = WireWriter()
    body(&writer)
    return [UInt8](writer.finalize())
}
